@@ -1,3 +1,11 @@
+Tue Dec 21 06:25:43 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* test/rexml/test_contrib.rb (ContribTester#test_pos): should not
+	  use fixed path name for tests.  [ruby-dev:42827]
+
+	* test/rexml/test_sax.rb (SAX2Tester#test_socket): should not use
+	  fixed port for tests.  [ruby-dev:42828]
+
 Tue Dec 21 01:41:42 2010  Masaya Tarui  <tarui@ruby-lnag.org>
 
 	* io.c : add an extra byte to buffer for the specification of read
